Some extra comments on the flatbuffers patch

--- a/ml-micro/gestures/platformio.ini
+++ b/ml-micro/gestures/platformio.ini
@@ -20,4 +20,7 @@ build_flags =
     -I"../lib/gemmlowp"
     -I"../lib/kissfft"
     -I"../lib/pigweed"
+
+# Important: The script below patches the 2.0.6 version of flatbuffers, 
+# when TFLite-micro updates their version this patch will no longer be necessary
 extra_scripts = pre:../lib/apply_patches.py
