More changes to code, working inference

--- a/ml-micro/gestures/platformio.ini
+++ b/ml-micro/gestures/platformio.ini
@@ -13,6 +13,7 @@ platform = nordicnrf52@9.5.0
 board = nano33ble
 framework = arduino
 build_flags = 
+    -D"TF_LITE_STATIC_MEMORY"
     -L"../lib/cortex_m_generic_cortex-m4_default/"
     -llibtensorflow-microlite
     -I"../lib/tflite-micro"
