Refactored a lot of code while testing with ESP32

--- a/ml-micro/gestures/platformio.ini
+++ b/ml-micro/gestures/platformio.ini
@@ -12,16 +12,20 @@
 platform = nordicnrf52@9.5.0
 board = nano33ble
 framework = arduino
+lib_deps=
+    Wire
+    https://github.com/tensorflow/tflite-micro-arduino-examples
 build_flags = 
-    -D"TF_LITE_STATIC_MEMORY"
-    -L"../lib/cortex_m_generic_cortex-m4_default/"
-    -llibtensorflow-microlite
-    -I"../lib/tflite-micro"
-    -I"../lib/flatbuffers/include"
-    -I"../lib/gemmlowp"
-    -I"../lib/kissfft"
-    -I"../lib/pigweed"
+    # -D"TF_LITE_STATIC_MEMORY"
+    # -L"../lib/cortex_m_generic_cortex-m4_default/"
+    # -llibtensorflow-microlite
+    # -I"../lib/tflite-micro"
+    # -I"../lib/flatbuffers/include"
+    # -I"../lib/gemmlowp"
+    # -I"../lib/kissfft"
+    # -I"../lib/pigweed"
+    # -I"../lib/tflite-micro-arduino/src/"
 
 # Important: The script below patches the 2.0.6 version of flatbuffers, 
 # when TFLite-micro updates their version this patch will no longer be necessary
-extra_scripts = pre:../lib/apply_patches.py
+# extra_scripts = pre:../lib/apply_patches.py
