Add READMEs and some extra result files

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,6 @@ numpy==1.23.5
 matplotlib==3.7.1
 jupyter==1.0.0
 scikit-learn==1.2.2
+pandas==2.0.2
+git+https://github.com/paulgavrikov/visualkeras.git
+Pillow==9.5.0
